--- a/module_1/M1_NB3_VisualCommunication.ipynb
+++ b/module_1/M1_NB3_VisualCommunication.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div align=\"right\">Python 2.7 Jupyter Notebook</div>"
+    "<div align=\"right\">Python 3.6 Jupyter Notebook</div>"
    ]
   },
   {
@@ -75,9 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load relevant libraries.\n",
@@ -86,6 +84,7 @@
     "import matplotlib\n",
     "import folium\n",
     "import geocoder\n",
+    "from tqdm import tqdm # Added for P4\n",
     "%pylab inline\n",
     "pylab.rcParams['figure.figsize'] = (10, 8)"
    ]
@@ -106,9 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Let's geocode a city in the format of the data set that we have available.\n",
@@ -128,9 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Find your location based on your IP address.\n",
@@ -159,9 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load student location data and display the header.\n",
@@ -190,9 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Step 1: Group the data to hide the user id.\n",
@@ -211,9 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Return all rows for New York.\n",
@@ -230,9 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Plot the count of students per country.\n",
@@ -251,9 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Plot the count of students per industry.\n",
@@ -288,7 +273,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -319,9 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# We tested the geocoder library with town and country as input. \n",
@@ -357,15 +340,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "# Now we use Geocoder in a loop to geocode the cities and update our dataframe.\n",
     "# Wait until the In{*} indicator on the lefthand side changes to a number before proceeding.\n",
+    "## NOTE CONFIRM INCLUSION: LAST TEST was at 7s per iteration (x690); Internet connectivity was very slow on test day\n",
     "\n",
-    "for i in range(len(df1)):\n",
+    "for i in tqdm(range(len(df1))):\n",
     "    g = geocoder.google(df1.loc[i,'geocode_input'])\n",
     "    df1.loc[i,'lat'],  df1.loc[i,'long'] = g.lat, g.lng\n",
     "    \n",
@@ -396,9 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Let's look at the dataframe again to see the populated values for latitude and longitude.\n",
@@ -417,7 +398,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -452,9 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Set map center and zoom level.\n",
@@ -631,23 +610,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
